--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
 #header{
     width: 100%;
     height: 100vh; 
-    background-image: url(bashirmouri/images/background.jpg);
+    background-image: URL(../images/background.jpg);
     background-size: cover;
     background-position: center;
 }
